医院预约挂号系统 设置全局异常和通过logback进行导出日志

--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=root
 # 返回json 的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+
+#设置日志级别
+#级别分为 OFF < FATAL < ERROR < WARN < INFO < DEBUG < ALL
+#logging.level.root=debug
