--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate}</version>
         </dependency>
+        <!--跨域配置-->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.5</version>
+        </dependency>
 
 
 
